--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit GFX Library@^1.11.10
 	adafruit/Adafruit ILI9341@^1.6.1
+	adafruit/Adafruit TouchScreen@^1.1.5
